# alere-tauri

./: README.txt  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: manifest.json
src/: App.tsx  README.txt  index.scss  index.tsx  setupTests.ts  shared.scss
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/migrations/2022-06-30-112355_create_tables/: down.sql  up.sql
src-tauri/migrations/2022-06-30-130256_initial_data/: down.sql  up.sql
src-tauri/src/: accounts.rs  cashflow.rs  connections.rs  cte_accounts.rs  cte_list_splits.rs  cte_query_balance.rs  cte_query_networth.rs  dates.rs  income_expense.rs  ledger.rs  main.rs  means.rs  metrics.rs  models.rs  occurrences.rs  quotes.rs  scenarios.rs  schema.rs
src/Account/: Account.scss  AccountName.tsx  SelectAccount.tsx  SelectAccountKinds.tsx  SelectInstitution.tsx  SelectMultiAccount.tsx
src/AccountEdit/: Panel.tsx  View.tsx
src/Accounts/: Panel.tsx  View.tsx
src/App/: App.scss  App.test.tsx  index.tsx
src/Assets/: Panel.tsx  Settings.tsx  View.tsx
src/Cashflow/: Cashflow.scss  Panel.tsx  Settings.tsx  View.tsx
src/Dashboard/: Dashboard.scss  Panel.scss  Panel.tsx  Props.tsx  Register.tsx  index.tsx
src/Dates/: Dates.scss  Dates.test.tsx  index.tsx
src/Form/: Dropdown.scss  Dropdown.tsx  Form.scss  MultipleSelect.scss  MultipleSelect.tsx  Upload.scss  Upload.tsx  index.tsx
src/Header/: Header.scss  OnlineUpdate.tsx  index.tsx
src/IEHistory/: Panel.tsx  Settings.tsx  View.tsx
src/IEHistoryBars/: IEHistoryBars.scss  Panel.tsx  Settings.tsx  View.tsx
src/IncomeExpense/: IncomeExpense.scss  Panel.tsx  Settings.tsx  View.tsx
src/Investments/: Investments.scss  Panel.tsx  Settings.tsx  View.tsx
src/Ledger/: Ledger.scss  Panel.tsx  Settings.tsx  View.tsx
src/LedgerPage/: index.tsx
src/LeftSideBar/: LeftSideBar.scss  index.tsx
src/List/: List.scss  ListAccounts.tsx  ListPrefs.tsx  ListWithColumns.tsx  index.tsx
src/Mean/: Mean.scss  Panel.tsx  Settings.tsx  View.tsx
src/Metrics/: Metrics.scss  Panel.tsx  Settings.tsx  View.tsx
src/NWHistory/: NetworthHistory.scss  Panel.tsx  Settings.tsx  View.tsx
src/NetWorth/: NetWorth.scss  Panel.tsx  Settings.tsx  View.tsx
src/Numeric/: Numeric.scss  index.tsx
src/Page/: index.tsx
src/Performance/: Panel.tsx  Settings.tsx  View.tsx
src/Recent/: View.tsx  (+1 more)
(+50 files in other folders)
