[package]
name = "alere"
version = "0.1.0"
description = "Assets, Liabilities, Equity, Revenues, Expenses"
authors = ["Emmanuel Briot"]
license = ""
repository = ""
default-run = "alere"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
lazy_static = "1.2.0"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
memoize = { version = "0.3.0", features = ["full"] }
regex = "1"
rrule = { version = "0.8.0" }
rust_decimal = "1.25"
rust_decimal_macros = "1.25"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0", features = ["api-all"] }

[features]

# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]

# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
